--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --open --hot",
+    "dev": "vue-cli-service serve --open --hot",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "mint-ui": "^2.2.13",
+    "vant": "^2.1.7",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.1.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
