--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "mint-ui": "^2.2.13",
+    "swiper": "^4.5.0",
     "vant": "^2.1.7",
     "vue": "^2.6.10",
     "vue-router": "^3.1.2",
