--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "mint-ui": "^2.2.13",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
     "swiper": "^4.5.0",
     "vant": "^2.1.7",
     "vue": "^2.6.10",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.1.2",
     "vuex": "^3.0.1"
   },
