--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "mint-ui": "^2.2.13",
     "node-sass": "^4.12.0",
@@ -17,7 +18,7 @@
     "vue": "^2.6.10",
     "vue-amap": "^0.5.10",
     "vue-router": "^3.1.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
