基本完工，后续开发定位地图等功能

--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
-    "mint-ui": "^2.2.13",
+    "date-fns": "^2.2.1",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
-    "swiper": "^4.5.0",
     "vant": "^2.1.7",
     "vue": "^2.6.10",
-    "vue-amap": "^0.5.10",
     "vue-router": "^3.1.2",
     "vuex": "^3.1.1"
   },
